# RLSFilter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml  install-dependencies.yml  workflow-build.yml
cmake/: CodeCoverage.cmake  SourcesAndHeaders.cmake
include/: RLSFilter.h
src/: RLSFilter.cpp
test/: CMakeLists.txt  test_rls_filter.cpp
